--- a/program1.html
+++ b/program1.html
@@ -9,7 +9,7 @@
     <body>
         <h1> This is <B><U>OM RABARI</U></B></h1>
         <p>I love to do <U>coding :)</U></p>
-        <img src = "WhatsApp Image 2024-10-19 at 11.01.11 AM (1).jpeg" alt = "image of om rabari" height="400px" width="400px">
+        <img src = "C:\Users\ok\html\WhatsApp Image 2024-10-19 at 11.01.11 AM (1).jpeg" alt = "image of om rabari" height="400px" width="400px">
 
         <h2><b><i>About Me: </i></b></h2>
         <p>Passionate self-taught developer | Building skills in web-dev | DSA | Ai | Dream : top 1% Engineer | open to collaborations! </p>
